--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 dist: xenial
 language: ruby
+rvm:
+  - 2.6
 before_install:
   - sudo ln -s /usr/bin/libtoolize /usr/bin/libtool
   - gem install bundler
